# Taller_1_2025

./: Album.cpp  Album.h  Aplicacion.cpp  Aplicacion.h  CMakeLists.txt  Cancion.cpp  Cancion.h  Lista_Enlazada_Albums.cpp  Lista_Enlazada_Albums.h  Lista_Enlazada_Canciones.cpp  Lista_Enlazada_Canciones.h  albumes.csv  canciones.csv  main.cpp
